--- a/ejs/templates/main.css
+++ b/ejs/templates/main.css
@@ -24,7 +24,7 @@
     --img-DS: url('./image/Cover_portfolioWeb.png');
 
 
-    
+
 
     /* Color */
     --white: #ffffff;
@@ -1930,71 +1930,41 @@ hr {
 
     opacity: 0.7;
     filter: alpha(opacity=70); */
-}
 
-.elementCard.WS:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--WS-Blue);
+    /* Add an invisible border */
+    border-bottom: 5px solid transparent;
+    /* Make the border transparent */
     transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.LASO:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--AMBlue);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.GLORIFY:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--GLORIFY-orangeBgLt);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.APPOINTA:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--APPOINTA-blue);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.SEER:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--seer-purple);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.toasttab:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--toasttab);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.GardenersHub:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--GardenersHub);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
 }
 
 .elementCard:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--Grey900);
     transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
 }
+
+.elementCard.WS:hover {
+    border-bottom: 5px solid var(--WS-Blue);
+}
+
+.elementCard.LASO:hover {
+    border-bottom: 5px solid var(--AMBlue);
+}
+
+.elementCard.GLORIFY:hover {
+    border-bottom: 5px solid var(--GLORIFY-orangeBgLt);
+}
+
+.elementCard.APPOINTA:hover {
+    border-bottom: 5px solid var(--APPOINTA-blue);
+}
+
+.elementCard.SEER:hover {
+    border-bottom: 5px solid var(--seer-purple);
+}
+
+
+
 
 .elementSeerDivider {
     background: linear-gradient(140deg, #FFFFFF, #e9f2ff 20%, #fff1f5 50%, #FFFFFF);
@@ -2191,7 +2161,10 @@ input {
     align-items: center;
     justify-content: center;
     width: 1.8rem;
-    height: 118px;
+    height: 100%;
+
+
+    
     background: transparent;
     border: none;
     cursor: pointer;
@@ -2199,6 +2172,7 @@ input {
 }
 
 button.passwordArr {
+    margin-top: 34px;
     z-index: 98;
     padding: 0;
     color: var(--Grey900);
@@ -2875,16 +2849,24 @@ button.passwordArr {
 }
 
 /* Base classes for all media - Mobile first */
+
+body .Grid--full>.Grid-cell {
+    flex: 0 0 97%;
+
+}
+
+
+
 .Grid--cols-2>.Grid-cell {
-    flex: 0 0 96%;
+    flex: 0 0 95%;
 }
 
 .Grid--cols-3>.Grid-cell {
-    flex: 0 0 96%;
+    flex: 0 0 95%;
 }
 
 .Grid--cols-4>.Grid-cell {
-    flex: 0 0 96%;
+    flex: 0 0 95%;
 }
 
 .Grid--cols-6>.Grid-cell {
@@ -2892,7 +2874,7 @@ button.passwordArr {
 }
 
 .Grid--cols-8>.Grid-cell {
-    flex: 0 0 calc(25% - 0.6em);
+    flex: 0 0 calc(24.5% - 0.4em);
     /*
 flex: 0 0 calc(33.3333% - 1em);
     flex: 0 0 calc(12.5% - 1em);
@@ -2937,21 +2919,22 @@ flex: 0 0 calc(33.3333% - 1em);
     .forFullResponsiveGrid {
         padding-left: 0.8em;
 
-            /*     margin: 0 -0.4em 0 0.8em;
+        /*     margin: 0 -0.4em 0 0.8em;
  + */
     }
-    
+
     .Grid--cols-4>.Grid-cell {
-        flex: 0 0 calc(50% - 0.8em);
+        flex: 0 0 calc(49% - 0.8em);
     }
-/*     .Grid--cols-6>.Grid-cell {
-        flex: 0 0 calc(3.3333% - 0.8em);
+
+    .Grid--cols-6>.Grid-cell {
+        flex: 0 0 calc(33% - 0.8em);
     }
-*/
+
 
 
     .Grid--cols-8>.Grid-cell {
-        flex: 0 0 calc(25% - 0.6em);
+        flex: 0 0 calc(24% - 0.4em);
         /*
                 flex: 0 0 calc(16.6666% - 1em);
         */
@@ -2981,7 +2964,7 @@ flex: 0 0 calc(33.3333% - 1em);
 /* when the screens more than an ipad === 768px + */
 @media (min-width: 48em) {
     body .Grid--full>.Grid-cell {
-        flex: 0 0 99.5%;
+        flex: 0 0 100%;
     }
 
     .Grid--cols-2>.Grid-cell,
@@ -3398,193 +3381,7 @@ flex: 0 0 calc(33.3333% - 1em);
 
 
 /* ======================= TBcarousel ======================= */
-/* ============= Begin Testimonial Flexbox ============ */
 
-
-.flex-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 110vh;
-    display: flex;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-}
-
-.flex-container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    min-height: auto;
-    height: 660px;
-    /* position: absolute; */
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-/* ------------------- 
-
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-
-
--------------------*/
-
-
-.left-zone {
-    height: 50%;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-}
-
-.left-zone .list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    list-style: none;
-    -ms-flex-line-pack: stretch;
-    align-content: stretch;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    margin: auto;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.item input {
-    display: none;
-}
-
-label {
-    line-height: 26px;
-    color: var(--Grey900);
-    font-weight: 300;
-
-
-
-
-}
-
-li label {
-    display: block;
-    opacity: 0.5;
-    height: 46px;
-    text-align: center;
-    line-height: 46px;
-    position: relative;
-    color: var(--Grey800);
-}
-
-li label:hover {
-    opacity: 0.75;
-    cursor: pointer;
-    background-color: var(--Grey200);
-}
-
-.content-test {
-    position: absolute;
-    right: 5%;
-    bottom: 0;
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    transform: translateY(100%);
-    height: 40%;
-    width: 100%;
-    -webkit-transition: 0.5s ease-out;
-    -o-transition: 0.5s ease-out;
-    transition: 0.5s ease-out;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    pointer-events: none;
-}
-
-.content-test p {
-    max-width: 50%;
-    text-align: center;
-}
-
-.right-zone {
-    width: 100%;
-    -webkit-box-flex: 1;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    height: 50%;
-}
-
-input:checked~.content-test {
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    transform: translateY(0%);
-    -webkit-transition: -webkit-transform 1s;
-    transition: -webkit-transform 1s;
-    -o-transition: transform 1s;
-    transition: transform 1s;
-    transition: transform 1s, -webkit-transform 1s;
-    opacity: 1;
-}
-
-input:checked~label {
-    opacity: 1;
-    -webkit-animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
-
-input:checked~label {
-    color: var(--APPOINTA-blue);
-    border-right: solid 4px var(--APPOINTA-blue);
-}
-
-input:checked~label.WS {
-    color: var(--WS-Teal);
-    border-right: solid 4px var(--WS-Teal);
-
-}
-
-input:checked~label.SEER {
-    color: var(--seer-purple);
-    border-right: solid 4px var(--seer-purple);
-
-}
-
-/* ============== End Testimonial Flexbox ============= */
 
 
 body .flex-container.BP {
@@ -4324,14 +4121,17 @@ body .flex-container.Mobile {
     display: flex;
     flex-direction: column;
 }
+
 .row {
     display: flex;
     flex-direction: row;
 }
+
 .rowToColumn {
     display: flex;
     flex-direction: row;
 }
+
 .align-top {
     display: flex;
     align-items: flex-start;
@@ -4913,115 +4713,6 @@ img {
 .zTop {
     z-index: 99;
 }
-
-
-
-
-/* ===== copy code to clipboard ====== */
-/* Style for the container of the code */
-pre {
-    height: 15em;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    /* To ensure the button doesn't overflow */
-    position: relative;
-    background: var(--Grey100);
-    /* A dark background for code readability */
-    color: var(--Grey700);
-    /* Light text for better contrast against dark background */
-    border-radius: 6px;
-    /* A subtle rounded corner */
-    overflow: hidden;
-    /* Ensure nothing spills out of our box */
-    font-size: clamp(0.68em, 0.78vw, 0.86em);
-    border: 1px solid var(--Grey300);
-}
-
-/* Style for the code */
-pre code {
-    position: absolute;
-    top: 46px;
-    width: 100%;
-    height: 100%;
-    display: block;
-    padding: 20px 0;
-    /* To ensure the button doesn't interfere with code lines */
-    white-space: pre;
-    /* Ensure code's white space (like indentation) is respected */
-    max-height: 58%;
-    /* reduced height to force overflow and see the scrollbar */
-    overflow-y: scroll;
-    /* Always show the scrollbar */
-    /* Allow vertical scroll */
-    scrollbar-width: thin;
-    /* Makes the scrollbar slimmer */
-    scrollbar-color: var(--Grey700) var(--Grey300);
-    /* Scrollbar styling (color, in this case) */
-}
-
-/* Scrollbar styles for WebKit browsers */
-pre code::-webkit-scrollbar {
-    width: 6px;
-}
-
-pre code::-webkit-scrollbar-thumb {
-    background-color: var(--white);
-    border-radius: 4px;
-
-}
-
-pre code::-webkit-scrollbar-thumb:hover {
-    background-color: var(--colorTealDk);
-    border-radius: 4px;
-}
-
-pre code::-webkit-scrollbar-track {
-    background-color: var(--Grey500);
-}
-
-/* Style for the copy button */
-pre button {
-    position: absolute;
-    top: 10px;
-    right: 12px;
-    background-color: var(--Grey900);
-    /* Blue background color */
-    color: var(--white);
-    /* White text */
-    border: none;
-    /* No border */
-    border-radius: 3px;
-    /* A subtle rounded corner for the button */
-    padding: 5px 10px;
-    cursor: pointer;
-    /* The hand icon on hover, suggesting an action */
-    font-size: 12px;
-    transition: background-color 0.3s ease;
-    /* A fade transition effect on hover */
-}
-
-pre button:hover {
-    background-color: var(--colorTealDk);
-    /* A slightly darker blue for the hover effect */
-}
-
-Pre .codeTiltle {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    background: var(--Grey200);
-    padding: 15px;
-    width: 100%;
-    font-size: 16px;
-}
-
-/* ===== copy code to clipboard ====== */
-
-
-
-
-
 
 /* ===== click icon copy to clipboard ====== */
 .ClipboardBoxIconOnly {
@@ -5720,7 +5411,7 @@ button.Clipboard.clickTxt:active {
 /* ===== Cloud tags ====== */
 
 /* ===== Share to Social Media ====== */
-
+/* =================== tabs + copy to clipboard  ===================*/
 .dropdownSM {
     position: relative;
     display: inline-block;
@@ -5731,7 +5422,7 @@ button.Clipboard.clickTxt:active {
     position: absolute;
     background-color: var(--Grey100);
     min-width: max-content;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radiusS);
     z-index: 1;
     right: 0;
@@ -5750,17 +5441,85 @@ button.Clipboard.clickTxt:active {
 
 }
 
-.dropdownSM-content a:hover {background-color: #f1f1f1}
+.dropdownSM-content a:hover {
+    background-color: #f1f1f1
+}
 
 .dropdownSM:hover .dropdownSM-content {
     display: block;
 }
 
-.dropbtnSM:hover, .dropbtn:focus {
+.dropbtnSM:hover,
+.dropbtn:focus {
     background-color: #3e8e41;
 }
 
 .iconM {
     cursor: pointer;
 }
+
 /* ===== Share to Social Media ====== */
+
+
+.tab-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tabs input[type="radio"] {
+    display: none;
+    /* Hide radio buttons */
+}
+
+.tab {
+    display: inline-block;
+    margin-right: 10px;
+    padding: 12px 18px;
+    cursor: pointer;
+    border-top: 1px solid var(--Grey500);
+    border-left: 1px solid var(--Grey500);
+    border-right: 1px solid var(--Grey500);
+
+    border-radius: 8px 8px 0px 0px;
+    background-color: var(--white);
+    transition: background-color 0.3s;
+}
+
+.tab:hover {
+    background-color: var(--Grey200);
+}
+
+/* Style for when the radio button is checked */
+.tabs input[type="radio"]:checked+label {
+    background-color: white;
+    border-bottom: 1px solid white;
+}
+
+
+
+.copy-btn {
+    background-color: var(--Grey900);
+    color: var(--white);
+    margin: 0 0 2px 0;
+    padding: 6px 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: var(--border-radiusXS);
+    font-size: 12px;
+}
+
+.copy-btn:hover {
+    background-color: var(--colorTealDk);
+}
+
+.code-block {
+    margin-top: -1px;
+    border: 1px solid var(--Grey500);
+    padding: 12px;
+    background-color: var(--white);
+    border-radius: 0px 0px 8px 8px;
+
+}
+
+/* =================== tabs + copy to clipboard  ===================*/
