--- a/ejs/templates/shared/arrowSubtitle.ejs
+++ b/ejs/templates/shared/arrowSubtitle.ejs
@@ -1,3 +1,5 @@
+<div class="blankHS"></div>
+
 <!-- Arrow -->
 <div class="wrapper">
     <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
@@ -11,3 +13,4 @@
     </div>
 </div>
 <!-- Arrow -->
+<div class="blankHXS"></div>
