--- a/ejs/templates/shared/tagCloud.ejs
+++ b/ejs/templates/shared/tagCloud.ejs
@@ -1,3 +1,5 @@
+<div class="blankHM"></div>
+
 <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <ul class="tags" id="TagsCloud">
 
@@ -48,3 +50,4 @@
 
     </ul>
   </div>
+  <div class="blankHL"></div>
