--- a/ejs/templates/architecture/index.ejs
+++ b/ejs/templates/architecture/index.ejs
@@ -34,11 +34,14 @@
           <div class="paddingleft">
             <div class="widthFitContent">
               <div class="dropdownSM">
-                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
+                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg"
+                  alt="Share">
                 <div class="dropdownSM-content">
-                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture" target="_blank">Share on LinkedIn</a>
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture"
+                    target="_blank">Share on LinkedIn</a>
 
-                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang" target="_blank">
+                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang"
+                    target="_blank">
                     Share on Pinterest
                   </a>
 
@@ -285,63 +288,16 @@
   <!-- RECOVERY OF RIVER EDGES & Narrow strips  -->
   <div class="blankHM"></div>
 
-  <!-- Arrow -->
+    <!-- Arrow -->
+
   <%- include('../shared/arrowSubtitle', {message: 'Skills & Experiences' }) %>
+
   <!-- Arrow -->
 
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <%- include('../shared/tagCloud') %>
 
-    <ul class="tags" id="TagsCloud">
-
-      <li class="tag"><span class="box"> User-centered Design</span></li>
-
-      <li class="tag"><span class="box"> Experience Design</span></li>
-      <li class="tag"><span class="box"> User Experience Design </span></li>
-      <li class="tag"><span class="box"> User Interface Design</span></li>
-      <li class="tag"><span class="box"> Interaction Design</span></li>
-
-      <li class="tag"><span class="box"> Product Design</span></li>
-      <li class="tag"><span class="box"> Service Design</span></li>
-
-      <li class="tag"><span class="box"> Design Thinking</span></li>
-      <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
-      <li class="tag"><span class="box"> Journey Mapping </span></li>
-      <li class="tag"><span class="box"> Data Analysis </span></li>
-
-
-
-      <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
-      <li class="tag"><span class="box"> Web Application Design</span></li>
-      <li class="tag"><span class="box"> Design System</span></li>
-      <li class="tag"><span class="box"> Graphic Design</span></li>
-
-      <li class="tag"><span class="box"> UX Research</span></li>
-      <li class="tag"><span class="box"> Design Research</span></li>
-
-      <li class="tag"><span class="box"> Design Research</span></li>
-      <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
-      <li class="tag"><span class="box"> Concept Testing</span></li>
-      <li class="tag"><span class="box"> Usability Testing</span></li>
-      <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
-
-      <li class="tag"><span class="box"> SaaS Application Design</span></li>
-      <li class="tag"><span class="box"> B2B Application Design</span></li>
-      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
-
-
-      <li class="tag"><span class="box"> Figma</span></li>
-      <li class="tag"><span class="box"> Adobe CS </span></li>
-      <li class="tag"><span class="box"> 3D Modeling</span></li>
-
-      <li class="tag"><span class="box">HTML</span></li>
-      <li class="tag"><span class="box">CSS</span></li>
-      <li class="tag"><span class="box">JavaScript</span></li>
-      <li class="tag"><span class="box">GitHub</span></li>
-
-    </ul>
-  </div>
   <div class="blankHL"></div>
   <!-- message -->
   <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
@@ -385,7 +341,8 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
@@ -394,7 +351,8 @@
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                  title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
@@ -402,7 +360,8 @@
               </a>
 
               <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram" title="Instagram">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
               </a>
             </div>
             <div class="blankHXS"></div>
