--- a/ejs/templates/architecture/index.ejs
+++ b/ejs/templates/architecture/index.ejs
@@ -34,14 +34,11 @@
           <div class="paddingleft">
             <div class="widthFitContent">
               <div class="dropdownSM">
-                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg"
-                  alt="Share">
+                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
                 <div class="dropdownSM-content">
-                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture"
-                    target="_blank">Share on LinkedIn</a>
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture" target="_blank">Share on LinkedIn</a>
 
-                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang"
-                    target="_blank">
+                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang" target="_blank">
                     Share on Pinterest
                   </a>
 
@@ -288,23 +285,21 @@
   <!-- RECOVERY OF RIVER EDGES & Narrow strips  -->
   <div class="blankHM"></div>
 
-    <!-- Arrow -->
+  <!-- Arrow -->
 
   <%- include('../shared/arrowSubtitle', {message: 'Skills & Experiences' }) %>
 
   <!-- Arrow -->
 
-  <div class="blankHM"></div>
 
   <%- include('../shared/tagCloud') %>
 
-  <div class="blankHL"></div>
   <!-- message -->
   <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
-          Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+          Thank You for Visiting! please <a> class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
           about professional projects.
         </h4>
       </div>
@@ -313,141 +308,19 @@
   </div>
   <!-- message -->
   <div class="blankHL"></div>
-  <!-- back to top -->
-  <button id="myBtn" title="Back to top">
-    <div id="dad">
-      <div id="bro">
-        <img src="../icon/arrow-top.svg" alt="back to top">
-      </div>
-      <div id="sis">
-        <h4>TOP</h4>
-      </div>
-    </div>
-  </button>
-  <!--back to top-->
-  <!--footer-->
-  <footer class="GreyBg100">
-
-    <div class="blankHS"></div>
-    <div class="wrapper">
-      <div class="element">
-
-        <div class="Grid Grid--gutters Grid--1of3">
-          <div class="Grid-cell">
-
-            <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            <div class="blankHXS"></div>
-
-            <div class="Grid Grid--gutters">
-              <div class="ClipboardBoxIconOnly">
-                <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                    title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                </button>
-              </div>
-              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-              </a>
-
-              <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
-                  title="GitHub">
-              </a>
-
-              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-              </a>
-
-              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-                  title="Instagram">
-              </a>
-            </div>
-            <div class="blankHXS"></div>
-          </div>
-          <div class="Grid-cell">
-            <div class="Grid Grid--gutters Grid--cols-6">
-              <div class="Grid-cell">
-                <h5> <strong> Project </strong> </h5>
-                <div class="blankHXXS"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
 
 
-                <h6>Elevating Community Involvement</h6>
-                <div class="blankHXXS"></div>
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
+  <!-- Shared across the platform -->
+  <%- include(`${templatePath}/shared/arrowSubtitle`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/tagCloud`) %>
+  <%- include(`${templatePath}/shared/thankYouMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+  about professional projects.`}) %>
 
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
-                <div class="blankHXXS"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
 
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
-              </div>
 
-              <div class="Grid-cell">
-                <h5> <strong> Service </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">UX/UI Design</h6>
-                </a>
-                <h6>Creating Intuitive User Experiences</h6>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">Design Research</h6>
-                </a>
-                <h6>In-depth Analysis for Targeted Solutions</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Web Development</h6>
-                </a>
-                <h6>Seamless Design Implementation</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Branding</h6>
-                </a>
-                <h6>Crafting Memorable Brand Identities</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> About </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/about">
-                  <h6>About me</h6>
-                </a>
-                <a href="mailto:vickyw.design@gmail.com">
-                  <h6>Email me</h6>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
-        <div class="Grid-cell">
-          <div class="footerBorder">
-            <div class="element">
-              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </footer>
-  <!--footer-->
-
+  <%- include(`${templatePath}/shared/backTop`) %>
+  <%- include(`${templatePath}/shared/footer`) %>
+  <!-- Shared across the platform -->
 
 
 
