--- a/ejs/templates/index.ejs
+++ b/ejs/templates/index.ejs
@@ -306,7 +306,7 @@
   <!-- Arrow -->
 
   <%- include('shared/tagCloud') %>
-  <%- include('shared/thankYouMessage', { version: 'addMessage', message: '999'}) %>
+  <%- include('shared/thankYouMessage', { version: '', message: '999'}) %>
 
   <%- include('shared/backTop') %>
   <%- include('shared/footer') %>
