oops, bad commit

--- a/templates/shared/header.ejs
+++ b/templates/shared/header.ejs
@@ -2,7 +2,7 @@
   <% const baseClasses = 'nav-item marginZero' %>
   <% const activeClasses = 'active activeNav' %>
   <% const inactiveClasses = 'inactive' %>
-  <% const pages = ['PROJECT', 'ARCHITECTURE', 'PHOTOGRAPHY', 'BLOG', 'ABOUT'] %>
+  <% const pages = ['PROJECT', 'ARCHITECTURE', 'PHOTOGRasdfasdfasdfsdfAPHY', 'BLOG', 'ABOUT'] %>
   <% function capitalizeFirstLetter(word) {
     return word.charAt(0).toUpperCase() + word.slice(1);
   } %>
