--- a/templates/shared/arrowSubtitle.ejs
+++ b/templates/shared/arrowSubtitle.ejs
@@ -6,7 +6,7 @@
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
-                    <%= message %> <img class="seArrow" src="/ejs/html/icon/arrow-se.svg" alt="icon arrow">
+                    <%= message %> <img class="seArrow" src="<%= websitePath %>/icon/arrow-se.svg" alt="icon arrow">
                 </h2>
             </div>
         </div>
