--- a/templates/shared/backTop.ejs
+++ b/templates/shared/backTop.ejs
@@ -2,7 +2,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img src="/ejs/html/icon/arrow-top.svg" alt="back to top">
+        <img src="<%= websitePath %>/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
