--- a/templates/shared/head.ejs
+++ b/templates/shared/head.ejs
@@ -84,9 +84,9 @@
     </script>
   
     <!-- Links -->
-    <link rel="stylesheet" href="/ejs/html/main.css">
-    <script type="text/javascript" src="/ejs/html/scripts.js"></script>
-    <script type="text/javascript" src="/ejs/html/scripts_project.js"></script>
+    <link rel="stylesheet" href="<%= websitePath %>/main.css">
+    <script type="text/javascript" src="<%= websitePath %>/scripts.js"></script>
+    <script type="text/javascript" src="<%= websitePath %>/scripts_project.js"></script>
     
   
   </head>
