--- a/templates/shared/intro.ejs
+++ b/templates/shared/intro.ejs
@@ -26,7 +26,7 @@
           <div class="widthFitContent">
             <div class="dropdownSM">
 
-              <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="/ejs/html/icon/share.svg" alt="Share">
+              <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="<%= websitePath %>/icon/share.svg" alt="Share">
               <div class="dropdownSM-content">
                 <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
                   on LinkedIn</a>
@@ -65,7 +65,7 @@
         </div>
         <div class="paddingleft">
           <div class="widthFitContent">
-            <img class="widthS" src="/ejs/html/about/me.jpg" alt="icon arrow">
+            <img class="widthS" src="<%= websitePath %>/about/me.jpg" alt="icon arrow">
           </div>
         </div>
       </div>
