--- a/templates/shared/thankYouMessage.ejs
+++ b/templates/shared/thankYouMessage.ejs
@@ -15,7 +15,7 @@
 
 
     </div>
-    <a href="/" class=""><img class="widthXS" src="/ejs/html/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    <a href="/" class=""><img class="widthXS" src="<%= websitePath %>/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
   </div>
 </div>
 <!-- message -->
