--- a/templates/shared/header.ejs
+++ b/templates/shared/header.ejs
@@ -9,7 +9,7 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="/ejs/html/icon/logo.svg" alt="VW"
+        <a href="http://vickywang.me/"><img class="logo pointer" src="<%= websitePath %>/icon/logo.svg" alt="VW"
             title="vickywang.me"></a>
         <div class="navbar">
           <ul class="nav-menu">
