--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include('../shared/head', {Title:'Architectural Innovation and Academic Exploration - Vicky Wang', 
+<%- include('../shared/head', {SEO:true, Title:'Architectural Innovation and Academic Exploration - Vicky Wang', 
   description:' a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.', 
   pageURL:'', thumbnailImgURL: 'vickywang_web.png'
   }) %>
