--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -1,6 +1,6 @@
 <html lang="en">
 <!--Head-->
-<%- include('../shared/head', {Title:'Nature & Wildlife Photographic Artistry by Vicky Wang', 
+<%- include('../shared/head', {SEO:true, Title:'Nature & Wildlife Photographic Artistry by Vicky Wang', 
   description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
   pageURL:'', thumbnailImgURL: 'vickywang_web.png'
   }) %>
