--- a/templates/shared/homePage_icons-buttons.ejs
+++ b/templates/shared/homePage_icons-buttons.ejs
@@ -14,7 +14,7 @@
     </div>
     <div class="Grid-cell">
       <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-        <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+        <img class="iconM hoverGrey100 paddingMax borderRadiusMax cardBorder" src="./icon/in.svg" alt="LinkedIn">
       </a>
     </div>
 
