--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!--Head-->
-<%- include('shared/head', {Title:'Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang', 
+<%- include('shared/head', {SEO:true, Title:'Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang', 
   description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
   pageURL:'', thumbnailImgURL: 'vickywang_web.png'
   }) %>
